# AnimeCards

./: .env.example  .gitignore  CAC.py  Cards.py  LICENSE  README.md  alembic.ini  bot.py  cards.json  config.py  configR.py  create_cards.py  loader.py  main.py  pyproject.toml  rarities.json  start.sh  usercards.json  verses.json
app/: bot.py  check_card_icons.py  config.py  loader.py  main.py  messages.json  migrate_card.py
app/StateGroups/: __init__.py  states.py
app/database/: __init__.py  models.py  requests.py  session.py
app/filters/: Private.py  ProfileFilter.py  __init__.py  utils.py
app/func/: __init__.py  consts.py  daily_updates.py  logger.py  messageformater.py  random_card.py  userphoto.py  utils.py
app/handlers/: __init__.py  admin.py  callbacks.py  clan.py  commands.py  daily.py  messages.py  open_cards.py  pagination.py  profile.py  promo.py  pvp.py  referral.py  shop.py  start.py  top_players.py  trade.py  vip.py  vip_callback.py
app/keyboards/: __init__.py  inlinekeyboard.py  replykeyboard.py  utils.py
app/messages/: MessageControl.py  __init__.py  messages.yaml
app/middlewares/: __init__.py  session.py  throttling.py
app/services/: GachaService.py  __init__.py  clan_service.py  daily_updates.py  inventory.py  invite.py  profile.py  random_card.py  random_title.py  schedule.py  shop.py  test.py  trades.py  updates.py  user_stat.py
app/states/: __init__.py
app/utils/: __init__.py  card_formater.py  clan_pagination_message.py  constants.py  consts.py  invite_utils.py  (+6 more)
db/: __init__.py  models.py  requests.py
migrations/: env.py
(+134 files in other folders)
